Impemented Generic Repository

--- a/MyShop/MyShop.WebUI/Views/ProductManager/Delete.cshtml
+++ b/MyShop/MyShop.WebUI/Views/ProductManager/Delete.cshtml
@@ -36,11 +36,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Categoty)
+            @Html.DisplayNameFor(model => model.Category)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Categoty)
+            @Html.DisplayFor(model => model.Category)
         </dd>
 
         <dt>
